{
    "name": "InputControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "dbf901c2-6e96-436a-90ba-c26d44f30b85",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "aeb0bdd4-233d-42dd-8139-c715f5dbfa48",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HitStraight",
                    "type": "Button",
                    "id": "41068ed2-5c5b-4100-a0aa-992c046cbe15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HitLob",
                    "type": "Button",
                    "id": "f314a507-d51c-4210-a5b9-ddc5d9a28243",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard (WASD)",
                    "id": "d4720c59-98e6-4d88-b99b-a138cce47bd1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "265ac1ce-5a0a-4ae7-a742-5118aef88980",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bdbe99c7-acdc-4073-b027-27bd2b1abdfd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "63404a86-de3c-4298-aecd-ae0778f930ab",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "addf000d-81c5-4610-a84a-c4dc5f53ce49",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ff9d76d2-34de-4dfb-aca5-014d472ea19e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HitStraight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcdae5a1-c944-4166-8ec5-820568344726",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HitLob",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}